--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🍕</text></svg>" />
+    <link rel="icon" href="/sprites/pizza-slice-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Track the &Pizza Pass deal between Archie and Charles - 30 pizzas for 30 days!" />
     <meta name="keywords" content="pizza, tracker, &pizza, pass, archie, charles" />
