--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Track the &Pizza Pass deal between Archie and Charles - 30 pizzas for 30 days!" />
     <meta name="keywords" content="pizza, tracker, &pizza, pass, archie, charles" />
-    <title>&PizzaPass 🍕</title>
+    <title>&PizzaPass</title>
   </head>
   <body>
     <div id="root"></div>
