--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Track the &Pizza Pass deal between Archie and Charles - 30 pizzas for 30 days!" />
     <meta name="keywords" content="pizza, tracker, &pizza, pass, archie, charles" />
+    <meta name="theme-color" content="#0d0d0d" />
+    <meta property="og:title" content="&PizzaPass" />
+    <meta property="og:description" content="Archie vs Charles: 30 pizzas in 30 days. Live stats and history." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/sprites/pizza-slice-favicon.png" />
+    <link rel="preload" href="/archie_c.jpg" as="image" imagesrcset="/archie_c.jpg 1x" />
+    <link rel="preload" href="/charles_c.jpg" as="image" imagesrcset="/charles_c.jpg 1x" />
+    <link rel="preload" href="/sprites/pizza-slice-stage-3.png" as="image" />
     <title>&PizzaPass</title>
   </head>
   <body>
